@@ -200,6 +200,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #12303: Add sigwaitinfo() and sigtimedwait() to the signal module.
+
 - Issue #12404: Remove C89 incompatible code from mmap module. Patch by Akira
   Kitada.
 
